# similarity_search_chroma_db_example_1

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
